# Sketch-FSL-S2M

./: .gitignore  README.md  make_scripts_executable.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: fewshot.yaml  paths.yaml
scripts/: run_eval.sh  run_infer.sh  run_train.sh
src/dataio/: collate.py  sketches.py
src/fewshot_core/: adapter.py  classes.py  losses.py  scorer.py
src/pipeline/: episodic_sampler.py  infer.py  train_fewshot.py
src/sketch2model_core/: wrappers.py
src/sketch2model_core/SoftRas/: setup.py
src/sketch2model_core/SoftRas/examples/: demo_deform.py  demo_render.py
src/sketch2model_core/SoftRas/examples/recon/: test.py
src/sketch2model_core/SoftRas/soft_renderer/: lighting.py  mesh.py  rasterizer.py  transform.py
src/sketch2model_core/SoftRas/soft_renderer/cuda/: create_texture_image_cuda.cpp  create_texture_image_cuda_kernel.cu  load_textures_cuda.cpp  load_textures_cuda_kernel.cu  soft_rasterize_cuda.cpp  soft_rasterize_cuda_kernel.cu  voxelization_cuda.cpp  voxelization_cuda_kernel.cu
src/sketch2model_core/SoftRas/soft_renderer/functional/: save_obj.py
src/sketch2model_core/data/: __init__.py  base_dataset.py  inference_dataset.py  shapenet_dataset.py  shapenet_sketch_dataset.py
src/sketch2model_core/models/: __init__.py  base_model.py  criterions.py  view_disentangle_model.py
src/sketch2model_core/options/: base_options.py
src/utils/: config.py  log.py  seed.py
tests/: test_classes_fixed.py  test_encoder_shapes.py  test_episode_loop.py  test_scorer_api.py
